tests/Compilation/positive/test074.juvix
-- Fields
module test074;

import Stdlib.Prelude open;

f (x y : Field) : Field := 0 - (x + y * (1 / x));

main : Field := f 10 7;
